# EasyTseClient

./: CMakeLists.txt  README.md
test_socket/: CMakeLists.txt
test_socket/src/: main.cpp
test_tse/: CMakeLists.txt
test_tse/src/: main.cpp
tseclient_lib/: CMakeLists.txt
tseclient_lib/include/exdev/: Socket.h  TseClient.h
tseclient_lib/src/: Socket.cpp  TseClient.cpp
